// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`API User > GET /api/v1/users > should return a formatted users 1`] = `
[
  {
    "createdAt": "2025-04-07T12:39:29.812Z",
    "id": "1",
    "name": "Iron Man",
    "updatedAt": "2025-04-08T17:31:39.489Z",
  },
  {
    "createdAt": "2025-04-07T12:39:29.812Z",
    "id": "2",
    "name": "Daredevil",
    "updatedAt": "2025-04-08T17:31:39.489Z",
  },
  {
    "createdAt": "2025-04-07T12:39:29.812Z",
    "id": "3",
    "name": "Thor",
    "updatedAt": "2025-04-08T17:31:39.489Z",
  },
]
`;

exports[`API User > GET /api/v1/users/:id > should return a formatted user 1`] = `
{
  "createdAt": "2025-04-07T12:39:29.812Z",
  "id": "1",
  "name": "Iron Man",
  "updatedAt": "2025-04-08T17:31:39.489Z",
}
`;
